# multi-agents-financial-markets-marketplace

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: main.py
src/agents/: brain.py  models.py
src/data/: models.py
src/engine/: agent.py  exchange.py  news.py  service.py
src/infra/: memory_store.py
src/ui/: app.py
src/utils/: simulation.py
